s/Manage Subscribers/Membership/

--- a/dada/templates/delete_email_screen_filtered.tmpl
+++ b/dada/templates/delete_email_screen_filtered.tmpl
@@ -2,7 +2,7 @@
 
 <!-- tmpl_set name="title" value="Verify Deletions" -->
 <p>
- Manage Subscribers (<!-- tmpl_var type_title -->)
+ Membership (<!-- tmpl_var type_title -->)
 &#187;
 Remove
 &#187;
