--- a/dada/templates/list_invite_screen.tmpl
+++ b/dada/templates/list_invite_screen.tmpl
@@ -6,7 +6,7 @@
 
 <div id="screentitle"> 
 	<div id="screentitlepadding">
-		 Manage Subscribers (Subscribers) 
+		 Membership (Subscribers) 
 		<!-- tmpl_if list_type_isa_list -->
 			Invite
 			<!-- tmpl_if list_settings.enable_mass_subscribe -->
