These changes make the HTML::Scrubber stuff a little more cleaner, as well as removing any vagrant, "disabled="disabled" parameters in form fields. Sometimes you can't uncheck options that aren't available, as they're disabled. And that breaks things.

--- a/dada/templates/adv_archive_options_screen.tmpl
+++ b/dada/templates/adv_archive_options_screen.tmpl
@@ -97,7 +97,7 @@
  <tr>
   <td>
    <p>
-    <input type="checkbox" name="disable_archive_js" id="disable_archive_js" value="1" <!-- tmpl_if list_settings.disable_archive_js -->checked="checked"<!--/tmpl_if--> <!-- tmpl_unless can_use_html_scrubber -->disabled="disabled"<!--/tmpl_unless--> />
+    <input type="checkbox" name="disable_archive_js" id="disable_archive_js" value="1" <!-- tmpl_if list_settings.disable_archive_js -->checked="checked"<!--/tmpl_if-->  />
    </p>
   </td>
   <td>
@@ -131,7 +131,7 @@
  <tr>
   <td>
    <p>
-    <input type="checkbox" name="display_attachments" id="display_attachments" value="1" <!-- tmpl_if list_settings.display_attachments -->checked="checked"<!--/tmpl_if--> <!-- tmpl_unless can_display_attachments -->disabled="disabled"<!--/tmpl_unless--> />
+    <input type="checkbox" name="display_attachments" id="display_attachments" value="1" <!-- tmpl_if list_settings.display_attachments -->checked="checked"<!--/tmpl_if-->  />
    </p>
   </td>
   <td>
