--- a/dada/templates/sending_preferences_screen.tmpl
+++ b/dada/templates/sending_preferences_screen.tmpl
@@ -170,7 +170,7 @@
      <tr>
       <td width="20"> 
        <p>
-        <input type="checkbox" name="use_smtp_ssl" id="use_smtp_ssl" value="1" <!-- tmpl_if list_settings.use_smtp_ssl -->checked="checked"<!-- /tmpl_if --> <!-- tmpl_unless can_use_smtp_ssl -->disabled="disabled"<!--/tmpl_unless-->/> 
+        <input type="checkbox" name="use_smtp_ssl" id="use_smtp_ssl" value="1" <!-- tmpl_if list_settings.use_smtp_ssl -->checked="checked"<!-- /tmpl_if --> /> 
        </p>
       </td>
       <td>
