Initial Pass on this new feature,

--- a/dada/templates/plugins/tracker/default.tmpl
+++ b/dada/templates/plugins/tracker/default.tmpl
@@ -148,7 +148,7 @@
   </td>
   </tr> 
 
-   <tr> 
+  <tr> 
   <td> 
    <p>
     <input type="checkbox" name="enable_open_msg_logging" id="enable_open_msg_logging"  value="1" <!-- tmpl_if list_settings.enable_open_msg_logging -->checked="checked"<!--/tmpl_if --> 
@@ -162,6 +162,24 @@
    </p>
   </td>
   </tr> 
+
+  <tr> 
+  <td> 
+   <p>
+    <input type="checkbox" name="tracker_track_email" id="tracker_track_email"  value="1" <!-- tmpl_if list_settings.tracker_track_email -->checked="checked"<!--/tmpl_if --> 
+   </p>	
+  </td> 
+  <td> 
+   <p>
+    <label for="tracker_track_email"> 
+     Track with Email Addresses
+    </label><br />
+		Message Clickthroughs, and Opens will also track the subscriber's email address. 
+   </p>
+  </td>
+  </tr> 
+
+
 
    <tr> 
   <td> 
