Small formatting changes.

--- a/dada/templates/outdated_sub_links_screen.tmpl
+++ b/dada/templates/outdated_sub_links_screen.tmpl
@@ -7,7 +7,8 @@
 <!-- tmpl_else --> 
 The Unsubscription
 <!-- /tmpl_if --> 
-link you followed is outdated. Sorry about that! Please re-fill out the form, below: 
+link you followed is outdated. We apologize for the inconvenience - the 
+confirmation system has been enhanced. Please re-fill out the form, below: 
 
 </p>
 
