--- a/dada/templates/confirm_captcha_step_screen.tmpl
+++ b/dada/templates/confirm_captcha_step_screen.tmpl
@@ -26,6 +26,9 @@
  <input type="hidden" name="list" value="<!-- tmpl_var list -->" /> 
  <input type="hidden" name="email" value="<!-- tmpl_var email -->" /> 
  <input type="hidden" name="token" value="<!-- tmpl_var token -->" /> 
+<!-- tmpl_if simple_test --> 
+ <input type="hidden" name="simple_test" value="pass" /> 
+<!-- /tmpl_if -->
 
  <p>
   <input type="submit" value="Subscribe Me!" class="processing" /> 
