--- a/dada/templates/plugins/tracker/message_report.tmpl
+++ b/dada/templates/plugins/tracker/message_report.tmpl
@@ -260,7 +260,7 @@
 		<div class="buttonfloat">
 		<form action="<!-- tmpl_var PluginURL -->" method="post"> 
 		<input type="hidden" name="f"    value="export_subscribers" /> 
-		<input type="hidden" name="type" value="clickthrough" /> 
+		<input type="hidden" name="type" value="clickthroughs" /> 
 		<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" />
 		<input type="submit" value="Export Clickthrough'd Subscribers" class="processing" /> 
 		</form>
@@ -297,7 +297,7 @@
 			<div class="buttonfloat">
 			<form action="<!-- tmpl_var PluginURL -->" method="post"> 
 			<input type="hidden" name="f"    value="export_subscribers" /> 
-			<input type="hidden" name="type" value="clickthrough" /> 
+			<input type="hidden" name="type" value="opens" /> 
 			<input type="hidden" name="mid"  value="<!-- tmpl_var mid -->" />
 			<input type="submit" value="Export Open'd Subscribers" class="processing" /> 
 			</form>
