--- a/dada/templates/plugins/password_protect_directories/default.tmpl
+++ b/dada/templates/plugins/password_protect_directories/default.tmpl
@@ -10,107 +10,109 @@
 
 
 <!-- tmpl_if done --> 
-<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
+	<!-- tmpl_include changes_saved_dialog_box_widget.tmpl  -->
+<!-- /tmpl_if --> 
+
+
+<!-- tmpl_if expr="(edit == 0)" --> 
+	
+	<!-- tmpl_if entries --> 
+
+		<fieldset> 
+			<legend>Current Password Protect Directories</legend> 
+	
+				<!-- tmpl_loop entries --> 
+	
+				<fieldset> 
+				<legend><!-- tmpl_var name --></legend>
+		
+				<table class="stripedtable">
+				 	<tr class="alt"> 
+					<td width="200px">
+					<strong>Protected URL</strong></td><td><a href="<!-- tmpl_var url -->" target="_blank"><!-- tmpl_var url --></a></td>
+					</tr>
+			
+				 	<tr> 
+					<td width="200px">
+					<strong>Corresponding Server Path</strong></td><td><!-- tmpl_var path --></td>
+					</tr>
+			 	
+					<tr class="alt"> 
+					<td><strong>Using a Custom Error Page?</strong></td><td><!-- tmpl_if use_custom_error_page -->Yes.<!-- tmpl_else -->No.<!-- /tmpl_if --></td>
+					</tr>
+			 
+					<tr>
+					<td width="200px">
+					<strong>Custom Error Page (Path)</strong></td><td><!-- tmpl_var custom_error_page --></td>
+					</tr>
+				
+					<tr class="alt"> 
+					<td width="200px">
+					<strong>Default Password</strong></td><td><!-- tmpl_if default_password --><em>********</em><!-- tmpl_else --><em>(None Set)</em><!-- /tmpl_if --></td>
+				</tr>
+			</table> 
+			<div class="buttonfloat">
+	
+				<form action="<!-- tmpl_var Plugin_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;"> 
+					<input type="hidden" name="f" value="edit_dir" /> 
+					<input type="hidden" name="id" value="<!-- tmpl_var id -->" /> 
+					<input type="submit" class="processing" value="Edit " />
+				</form>
+		
+		
+			<form action="<!-- tmpl_var Plugin_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;"> 
+				<input type="hidden" name="f" value="delete_dir" /> 
+				<input type="hidden" name="id" value="<!-- tmpl_var id -->" /> 
+	
+				<input type="submit" class="alertive" value="Delete " />
+					</form> 
+		
+					</div>
+				<div class="floatclear"></div>
+			
+
+			</fieldset> 
+
+			<!-- /tmpl_loop --> 
+		</fieldset> 
+
+	<!-- /tmpl_if --> 
 <!-- /tmpl_if --> 
 
 <!-- tmpl_if problems --> 
-<div class="badweatherbox">
 
-<p><strong>Problems were found with the information you just submitted:</strong></p> 
-<ul>
-<!-- tmpl_loop errors --> 
-	<li>
-	<!-- tmpl_if expr="(error eq 'error_missing_name')" -->
-		<strong>Name</strong> is missing.
-	<!-- /tmpl_if --> 
-	<!-- tmpl_if expr="(error eq 'error_missing_url')" -->
-		<strong>URL</strong> is missing.
-	<!-- /tmpl_if --> 
-	<!-- tmpl_if expr="(error eq 'error_url_no_exists')" -->
-		<strong>URL</strong> does not look like a valid URL.
-	<!-- /tmpl_if --> 
-	<!-- tmpl_if expr="(error eq 'error_missing_path')" -->
-		<strong>Path</strong> is missing.
-	<!-- /tmpl_if --> 
-	<!-- tmpl_if expr="(error eq 'error_path_no_exists')" -->
-		<strong>Path</strong> does not look like a valid Server Path.
-	<!-- /tmpl_if --> 
-	<!-- tmpl_if expr="(error eq 'error_path_not_writable')" --> 
-		<strong>Path</strong> is not writable by this plugin.
-	<!-- /tmpl_if --> 
-	<!-- tmpl_if expr="(error eq 'error_use_custom_error_page_set_funny')" -->
-		"Use a Custom Error Page" Isn't a 1 or a 0
-	<!-- /tmpl_if --> 
-	</li>
-<!-- /tmpl_loop --> 
-</ul>
-</div>
-<!-- /tmpl_if --> 
+	<div class="badweatherbox">
 
-<!-- tmpl_unless edit --> 
-
-<!-- tmpl_if entries --> 
-
-	<fieldset> 
-		<legend>Current Password Protect Directories</legend> 
-	
-			<!-- tmpl_loop entries --> 
-	
-			<fieldset> 
-			<legend><!-- tmpl_var name --></legend>
-		
-			<table class="stripedtable">
-			 	<tr class="alt"> 
-				<td width="200px">
-				<strong>Protected URL</strong></td><td><a href="<!-- tmpl_var url -->" target="_blank"><!-- tmpl_var url --></a></td>
-				</tr>
-			
-			 	<tr> 
-				<td width="200px">
-				<strong>Corresponding Server Path</strong></td><td><!-- tmpl_var path --></td>
-				</tr>
-			 	
-				<tr class="alt"> 
-				<td><strong>Using a Custom Error Page?</strong></td><td><!-- tmpl_if use_custom_error_page -->Yes.<!-- tmpl_else -->No.<!-- /tmpl_if --></td>
-				</tr>
-			 
-				<tr>
-				<td width="200px">
-				<strong>Custom Error Page (Path)</strong></td><td><!-- tmpl_var custom_error_page --></td>
-				</tr>
-				
-				<tr class="alt"> 
-				<td width="200px">
-				<strong>Default Password</strong></td><td><!-- tmpl_if default_password --><em>********</em><!-- tmpl_else --><em>(None Set)</em><!-- /tmpl_if --></td>
-			</tr>
-		</table> 
-		<div class="buttonfloat">
-	
-			<form action="<!-- tmpl_var Plugin_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;"> 
-				<input type="hidden" name="f" value="edit_dir" /> 
-				<input type="hidden" name="id" value="<!-- tmpl_var id -->" /> 
-				<input type="submit" class="processing" value="Edit " />
-			</form>
-		
-		
-		<form action="<!-- tmpl_var Plugin_URL -->" method="post" accept-charset="<!-- tmpl_var HTML_CHARSET -->" style="display: inline; margin: 0;"> 
-			<input type="hidden" name="f" value="delete_dir" /> 
-			<input type="hidden" name="id" value="<!-- tmpl_var id -->" /> 
-	
-			<input type="submit" class="alertive" value="Delete " />
-				</form> 
-		
-				</div>
-			<div class="floatclear"></div>
-			
-
-		</fieldset> 
-
-		<!-- /tmpl_loop --> 
-	</fieldset> 
-
-<!-- /tmpl_if --> 
-<!-- /tmpl_unless --> 
+	<p><strong>Problems were found with the information you just submitted:</strong></p> 
+	<ul>
+	<!-- tmpl_loop errors --> 
+		<li>
+		<!-- tmpl_if expr="(error eq 'error_missing_name')" -->
+			<strong>Name</strong> is missing.
+		<!-- /tmpl_if --> 
+		<!-- tmpl_if expr="(error eq 'error_missing_url')" -->
+			<strong>URL</strong> is missing.
+		<!-- /tmpl_if --> 
+		<!-- tmpl_if expr="(error eq 'error_url_no_exists')" -->
+			<strong>URL</strong> does not look like a valid URL.
+		<!-- /tmpl_if --> 
+		<!-- tmpl_if expr="(error eq 'error_missing_path')" -->
+			<strong>Path</strong> is missing.
+		<!-- /tmpl_if --> 
+		<!-- tmpl_if expr="(error eq 'error_path_no_exists')" -->
+			<strong>Path</strong> does not look like a valid Server Path.
+		<!-- /tmpl_if --> 
+		<!-- tmpl_if expr="(error eq 'error_path_not_writable')" --> 
+			<strong>Path</strong> is not writable by this plugin.
+		<!-- /tmpl_if --> 
+		<!-- tmpl_if expr="(error eq 'error_use_custom_error_page_set_funny')" -->
+			"Use a Custom Error Page" Isn't a 1 or a 0
+		<!-- /tmpl_if --> 
+		</li>
+	<!-- /tmpl_loop --> 
+	</ul>
+	</div>
+	<!-- /tmpl_if --> 
 
 
 <fieldset> 
