This fixes a problem with copying the template tag, and pasting it into the WYSIWYG editor - the <code></code> tags ALSO get copied/pasted (along with the bullet point), screwing up the formatting in your editing window.

--- a/dada/static/css/dada_mail.css
+++ b/dada/static/css/dada_mail.css
@@ -296,7 +296,7 @@ p.small {
 
 /* ----- CODE ----- */
 
-code, pre {
+code, pre, p.fake_code {
 	margin: 5px;
 	padding: 5px;
 	border: 1px solid #ccc;
