--- a/dada/templates/subscriber_field_tags_listing_widget.tmpl
+++ b/dada/templates/subscriber_field_tags_listing_widget.tmpl
@@ -19,12 +19,10 @@
 
  		<ul> 
        <!-- tmpl_loop fields -->
-        <li>
-	 		<p>
-         		<code>&lt;!-- tmpl_var <!-- tmpl_var name --> --&gt;</code>
+	 		<p class="fake_code">
+         		&lt;!-- tmpl_var <!-- tmpl_var name --> --&gt;
         	</p>
 
-		</li>
        <!--/tmpl_loop --> 
       </ul>
 <!--   </div> 
