small formatting changes

--- a/dada/templates/archive_list_widget.tmpl
+++ b/dada/templates/archive_list_widget.tmpl
@@ -41,7 +41,20 @@
 			   </em>
 			  </p>
 			</blockquote>
+			<!-- tmpl_if list_settings.enable_gravatars --> 
 
+				<!-- tmpl_if can_use_gravatar_url --> 
+
+			    	<!-- tmpl_if gravatar_img_url -->
+			
+						<div class="floatclear"></div> 
+			
+			    	<!-- /tmpl_if --> 
+
+				<!-- /tmpl_if --> 
+
+			<!-- /tmpl_if -->
+			
 		<!--/tmpl_if-->
 
 
