minor formatting change, here.

--- a/dada/templates/extensions/blog_index/blog_index.tmpl
+++ b/dada/templates/extensions/blog_index/blog_index.tmpl
@@ -11,9 +11,11 @@
 		</a>
 	</h1> 
 
-    <p style="text-align:right;color:#999">Published on <!-- tmpl_var pretty_date --></p>
-    
-<p>
+    <p style="text-align:right;color:#999">
+		Published on <!-- tmpl_var pretty_date -->
+	</p>
+
+	<p>
 	
     <!-- tmpl_if blurb_style --> 
         <blockquote><em>
