--- a/dada/templates/sending_preferences_screen.tmpl
+++ b/dada/templates/sending_preferences_screen.tmpl
@@ -453,28 +453,34 @@
 			    </label>
 		   </p>
 			<div id="amazon_ses_preferences">
-			<fieldset> 
+			<fieldset>
 
 			<!-- tmpl_if amazon_ses_has_needed_cpan_modules --> 
-				<p class="positive" id="has_needed_cpan_modules"> 
-					All needed CPAN modules are installed!
-				</p> 
+				
+					<p class="positive" id="has_needed_cpan_modules"> 
+						<!-- All needed CPAN modules are installed! -->
+					</p>
+				
 			<!-- tmpl_else --> 
-				<p class="error"> 
-					One or more of the following CPAN modules needs to be installed for Amazon SES sending to work:
-				</p>
+				
+				<div class="badweatherbox"> 
+					
+					<p> 
+						One or more of the following CPAN modules needs to be installed for Amazon SES sending to work:
+					</p>
 
-				<ul> 
-					<!-- tmpl_loop amazon_ses_required_modules --> 
-						<!-- tmpl_unless installed --> 
-							 <li>
-							 <p class="error">  
-							  <!-- tmpl_var module --> 
-							 </p> 
-							</li> 
-						<!-- /tmpl_unless --> 
-					<!-- /tmpl_loop --> 
-				</ul> 
+					<ul> 
+						<!-- tmpl_loop amazon_ses_required_modules --> 
+							<!-- tmpl_unless installed --> 
+								 <li>
+								 <p class="error">  
+								  <!-- tmpl_var module --> 
+								 </p> 
+								</li> 
+							<!-- /tmpl_unless --> 
+						<!-- /tmpl_loop --> 
+					</ul> 
+				</div> 
 			<!-- /tmpl_if --> 
 
 			<!-- tmpl_if expr="(list_settings.sending_method eq 'amazon_ses')" -->
