--- a/dada/templates/amazon_ses_get_stats_widget.tmpl
+++ b/dada/templates/amazon_ses_get_stats_widget.tmpl
@@ -19,7 +19,7 @@
 		</p>
 	<!-- tmpl_else --> 
 		<p>
-			<strong>Warning!</strong>  There's a problem with the saved AWS Credentials. 
+			<strong>Warning!</strong>  There's a problem with the AWS Credentials. 
 		</p>	
 	<!-- /tmpl_if -->
 
