--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -106,6 +106,20 @@ $FILE_BROWSER_OPTIONS = {
 =cut
 # end cut for WYSIWYG Editor Options
 
+# start cut for Amazon SES Options
+=cut
+
+$AMAZON_SES_OPTIONS = { 
+	AWSAccessKeyId => '<!-- tmpl_var AWSAccessKeyId -->', 
+	AWSSecretKey   => '<!-- tmpl_var AWSSecretKey -->', 
+};
+
+=cut
+# end cut for Amazon SES Options
+
+
+
+
 =cut
 # start cut for Dada Mail Profile Options
 
