Make SES a bit more slick.

--- a/dada/templates/amazon_ses_verify_email_widget.tmpl
+++ b/dada/templates/amazon_ses_verify_email_widget.tmpl
@@ -11,7 +11,7 @@
 				<strong>
 					Warning!
 				</strong>  
-				There's a problem with the saved AWS Credentials. 
+				There's a problem with the AWS Credentials. 
 			</p>
 		</div>
 	<!-- /tmpl_if --> 
