--- a/dada/templates/previewBatchSendingSpeed_widget.tmpl
+++ b/dada/templates/previewBatchSendingSpeed_widget.tmpl
@@ -5,7 +5,7 @@
 	<!-- tmpl_if somethings_wrong --> 
 	
 		<p>
-			<strong>Warning!</strong>  There's a problem with the saved AWS Credentials. 
+			<strong>Warning!</strong>  There's a problem with the AWS Credentials. 
 		</p>
 	
 	<!-- tmpl_else -->
