Adding, "is not equal" and, "is not like"

--- a/dada/templates/partial_sending_options_widget.tmpl
+++ b/dada/templates/partial_sending_options_widget.tmpl
@@ -32,6 +32,9 @@
 			
 			<option value="like">Is Like</option>
             <option value="equal_to">Is Equal To</option> 
+			<option value="not_like">Is Not Like</option>
+            <option value="not_equal_to">Is Not Equal To</option> 
+
            </select> 
           </p>
          </td>
