Here, now the system should work! ;)

--- a/dada/templates/error_not_subscribed_screen.tmpl
+++ b/dada/templates/error_not_subscribed_screen.tmpl
@@ -38,7 +38,7 @@
 </ul>
 
 <p>If you would like to unsubscribe from a different mailing list, please visit the <!-- tmpl_var PROGRAM_NAME --> 
-	<a href="<!-- tmpl_var PROGRAM_URL -->?email=<!-- tmpl_var email escape="HTML" -->&amp;set_flavor=u">
+	<a href="<!-- tmpl_var PROGRAM_URL -->?email=<!-- tmpl_var email escape="HTML" -->">
 	 main screen
 	</a>
 	, 
@@ -46,7 +46,7 @@
 </p>
 
 <p>If you want to subscribe to this list instead, please visit 
-<a href="<!-- tmpl_var PROGRAM_URL -->?f=list&amp;l=<!-- tmpl_var list_settings.list escape="HTML"-->&amp;email=<!-- tmpl_var subscriber.email -->&amp;set_flavor=s">
+<a href="<!-- tmpl_var PROGRAM_URL -->?f=list&amp;l=<!-- tmpl_var list_settings.list escape="HTML"-->&amp;email=<!-- tmpl_var subscriber.email -->">
 	this list's main screen
 </a>.
 </p>
