--- a/dada/templates/error_subscribed_screen.tmpl
+++ b/dada/templates/error_subscribed_screen.tmpl
@@ -36,7 +36,7 @@ which will have a list of all available lists.
 </p>
 
 <p>If you want to unsubscribe from this list instead, please visit 
- <a href="<!-- tmpl_var PROGRAM_URL -->?f=list&amp;l=<!-- tmpl_var list_settings.list escape="HTML" -->&amp;email=<!-- tmpl_var subscriber.email escape="HTML" -->&amp;set_flavor=u">
+ <a href="<!-- tmpl_var PROGRAM_URL -->?f=list&amp;l=<!-- tmpl_var list_settings.list escape="HTML" -->&amp;email=<!-- tmpl_var subscriber.email escape="HTML" -->">
 	this list's main screen
  </a>
 .
